[package]
name = "jaeger-proxy"
version = "0.1.0"
authors = ["o.ermakov <o.ermakov@cian.ru>"]
edition = "2018"


[dependencies]
# common
async-std = { version = "1.6.0", features = ["attributes"] }
lazy_static = "1.4.0"
serde = "1.0.113"
serde_json = "1.0.55"
chrono = "0.4.11"

# logging
async-log = "2.0.0"
env_logger = "0.7.1"
log = { version = "0.4", features = ["std", "serde"] }

# cli
structopt = "0.3.15"

# web
tide = "0.11.0"

# http-client
surf = "1.0.3"